# simplebank

./: .flake8  .gitignore  Makefile  Pipfile  __init__.py  bank.db  bank.py  conftest.py  database_operations.py  docker-compose.yml  formaters.py  models.py  operations.py  pyproject.toml  querys.py  setup_database.py  tox.ini
.github/workflows/: python-app.yml
tests/: test_operations.py
