[tool.poetry]
name = "simplebank"
version = "0.1.0"
description = ""
authors = ["marcospsviana <marcospaulo.silvaviana@gmail.com>"]
license = "LGP3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg = {extras = ["binary", "pool"], version = "^3.2.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
